--- a/assignment-app/src/app/assignments/assignments.component.css
+++ b/assignment-app/src/app/assignments/assignments.component.css
@@ -3,7 +3,21 @@
     background-color: orange;
 }
 
-.nonRendu{
+.nonRendu {
     color: white;
     background-color: blue;
 }
+
+.form {
+    display: flex;
+    flex-direction: column;
+    margin: 5px;
+}
+
+.example-spacer {
+    flex: 1 1 auto;
+}
+
+  mat-drawer {
+    background-color: #eee;
+  }
