--- a/assignment-app/src/app/assignments/assignments.component.css
+++ b/assignment-app/src/app/assignments/assignments.component.css
@@ -18,6 +18,20 @@
     flex: 1 1 auto;
 }
 
-  mat-drawer {
+mat-drawer {
     background-color: #eee;
-  }
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+}
+
+.buttons-container {
+    display: flex; /* 启用 Flexbox */
+    justify-content: flex-end; /* 水平方向上推向右边 */
+}
+
+.ajouterBtn, .supprimerBtn {
+    margin-left: 10px; /* 如果需要，为按钮之间添加一些空间 */
+}
