--- a/assignment-app/src/app/assignments/assignments.component.html
+++ b/assignment-app/src/app/assignments/assignments.component.html
@@ -12,10 +12,11 @@
            }
     </div>
 } -->
-<p>
+<p><!-- Toolbar -->
     <mat-toolbar color="primary">
-        <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon" (click)="opened = !opened">
-            <mat-icon >menu</mat-icon>
+        <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon"
+            (click)="opened = !opened">
+            <mat-icon>menu</mat-icon>
         </button>
         <span>My App</span>
         <span class="example-spacer"></span>
@@ -29,32 +30,31 @@
 </p>
 <mat-drawer-container class="example-container">
     <mat-drawer mode="side" [opened]="opened" mode="push"> <!-- 侧边内容 --><mat-list role="list">
-        <mat-list-item role="listitem">Liste des devoirs</mat-list-item>
-        <mat-list-item role="listitem">Ajout d'un devoir</mat-list-item>
-        <mat-list-item role="listitem">Modification d'un devoir</mat-list-item>
-        <mat-list-item role="listitem">Suppression d'un devoir</mat-list-item>
-        <mat-list-item role="listitem">Génération de données de test</mat-list-item>
-      </mat-list>
-      
-        
+            <mat-list-item role="listitem">Liste des devoirs</mat-list-item>
+            <mat-list-item role="listitem">Ajout d'un devoir</mat-list-item>
+            <mat-list-item role="listitem">Modification d'un devoir</mat-list-item>
+            <mat-list-item role="listitem">Suppression d'un devoir</mat-list-item>
+            <mat-list-item role="listitem">Génération de données de test</mat-list-item>
+        </mat-list>
     </mat-drawer>
     <mat-drawer-content> <!-- 主要内容 -->
-        <form ngForm (submit)="onSubmit() ;assignmentForm.reset()" #assignmentForm class='form'>
+        <!-- <form ngForm (submit)="onSubmit() ;assignmentForm.reset()" #assignmentForm class='form'>
             <mat-form-field>
                 <input matInput [(ngModel)]="nomDevoir" name="nom" placeholder="Nom du devoir" required>
             </mat-form-field>
             <mat-form-field>
-                <input matInput [matDatepicker]="picker" placeholder="Date de rendu" [(ngModel)]="dateDeRendu" name="date"
-                    required>
+                <input matInput [matDatepicker]="picker" placeholder="Date de rendu" [(ngModel)]="dateDeRendu"
+                    name="date" required>
                 <mat-datepicker-toggle matTextSuffix [for]="picker"></mat-datepicker-toggle>
                 <mat-datepicker #picker></mat-datepicker>
             </mat-form-field>
-        
+
             <p>{{nomDevoir}}</p>
             <button [disabled]="!ajouteActive" mat-stroked-button color="primary">Ajouter un devoir</button>
         </form>
-        
-        <div *ngFor="let assignment of assignments" [ngClass]="{'rendu':assignment.rendu, 'nonRendu': !assignment.rendu}">
+
+        <div *ngFor="let assignment of assignments"
+            [ngClass]="{'rendu':assignment.rendu, 'nonRendu': !assignment.rendu}">
             <p *ngIf="assignment.rendu;else nonsoumis">
                 le devoir {{assignment.nom}} a ete rendu le {{assignment.dateDeRendu | date: 'dd/MM/yyyy'}}
             </p>
@@ -63,8 +63,33 @@
                     le devoir {{assignment.nom}} doit etre rendu le {{assignment.dateDeRendu | date: 'dd/MM/yyyy'}}
                 </p>
             </ng-template>
-        </div>
+        </div> -->
+        <!-- <main class="container" *ngIf="!formVisible"> -->
+        <main class="container">
+            <div class="buttons-container">
+                <button class="supprimerBtn" mat-flat-button color="warn">Supprimer</button>
+                <button class="ajouterBtn" mat-flat-button color="accent" (click)="onAddAssignmentBtnClick()">Ajouter Assignment</button>
+            </div>            
+            <mat-list *ngFor="let assignment of assignments">
+                <h3 mat-subheader> {{assignment.dateDeRendu | date}}</h3>
+                <mat-list-item (click)="assignmentClique(assignment)">
+                    <p appRendu *ngIf="assignment.rendu;else nonsoumis">
+                        le devoir {{assignment.nom}} a ete rendu le
+                    </p>
+                    <ng-template #nonsoumis>
+                        <p>
+                            le devoir {{assignment.nom}} n'a pas ete rendu
+                        </p>
+                    </ng-template>
+                </mat-list-item>
+                <mat-divider></mat-divider>
+            </mat-list>
+
+            <app-assignment-detail [assignmentTransmis]="assignmentSelectionne" (devoirRenduVert)="onDevoirRenduVert()">
+            </app-assignment-detail>
+        </main>
+
+        <app-add-assignment (nouvelAssignment)="onNouvelAssignment($event)" *ngIf="formVisible"></app-add-assignment>
+
     </mat-drawer-content>
 </mat-drawer-container>
-
-
