--- a/assignment-app/src/app/assignments/assignments.component.html
+++ b/assignment-app/src/app/assignments/assignments.component.html
@@ -66,12 +66,20 @@
         </div> -->
         <!-- <main class="container" *ngIf="!formVisible"> -->
         <main class="container">
+            <!-- <div class="buttons-container">
+                <button class="ajouterBtn" mat-flat-button color="accent" (click)="onAddAssignmentBtnClick()">Ajouter
+                    Assignment</button>
+            </div> -->
             <div class="buttons-container">
-                <button class="supprimerBtn" mat-flat-button color="warn">Supprimer</button>
-                <button class="ajouterBtn" mat-flat-button color="accent" (click)="onAddAssignmentBtnClick()">Ajouter Assignment</button>
-            </div>            
+                <a routerLink="/add">
+                    <button class="ajouterBtn" mat-flat-button color="accent"
+                        (click)="onAddAssignmentBtnClick()">Ajouter Assignment
+                    </button>
+                </a>
+            </div>
             <mat-list *ngFor="let assignment of assignments">
-                <h3 mat-subheader> {{assignment.dateDeRendu | date}}</h3>
+                <nav><a routerLink="/assignment/{{assignment.id}}">
+                    <h3 mat-subheader> {{assignment.dateDeRendu | date}}</h3>
                 <mat-list-item (click)="assignmentClique(assignment)">
                     <p appRendu *ngIf="assignment.rendu;else nonsoumis">
                         le devoir {{assignment.nom}} a ete rendu le
@@ -82,14 +90,16 @@
                         </p>
                     </ng-template>
                 </mat-list-item>
+                </a></nav>
                 <mat-divider></mat-divider>
             </mat-list>
 
-            <app-assignment-detail [assignmentTransmis]="assignmentSelectionne" (devoirRenduVert)="onDevoirRenduVert()">
-            </app-assignment-detail>
+            <!-- <app-assignment-detail [assignmentTransmis]="assignmentSelectionne" (devoirRenduVert)="onDevoirRenduVert()">
+            </app-assignment-detail> -->
         </main>
 
-        <app-add-assignment (nouvelAssignment)="onNouvelAssignment($event)" *ngIf="formVisible"></app-add-assignment>
-
+        <!-- <app-add-assignment (nouvelAssignment)="onNouvelAssignment($event)" *ngIf="formVisible"></app-add-assignment> -->
+        
     </mat-drawer-content>
 </mat-drawer-container>
+<router-outlet></router-outlet>
