--- a/assignment-app/src/app/app.component.html
+++ b/assignment-app/src/app/app.component.html
@@ -1,11 +1,44 @@
-<h1>
-    <nav><a routerLink="/home">{{title}}</a></nav>
-</h1>
-<mat-slide-toggle color="primary" (click)="login()">Slide me!</mat-slide-toggle>
-@if (true) {
-    <button mat-raised-button color="primary">Se connecter</button>
-} @else {
-    <button mat-raised-button color="primary">se Déconnecter</button>
-}
+<!-- <a routerLink="/home">{{title}}</a> -->
+<!-- <mat-slide-toggle color="primary" (click)="fakeLogin()">Slide me!</mat-slide-toggle> -->
+<!-- <button (click)="onClick()">点击</button> -->
 
-<router-outlet></router-outlet>
+<p><!-- Toolbar -->
+    <mat-toolbar color="primary">
+        <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon"
+            (click)="opened = !opened">
+            <mat-icon>menu</mat-icon>
+        </button>
+        <a routerLink="/home"><span>My App</span></a>
+        <span class="example-spacer"></span>
+        @if (!authService.loggedIn) {
+            <a routerLink="/login">
+                <button mat-raised-button color="accent">Log in</button>
+            </a>
+        } @else {
+            <button 
+           (click)="onLogout()" mat-raised-button color="warn">Log out</button>
+        }
+        
+        <a routerLink="/home">
+            <button mat-icon-button class="example-icon home-icon" aria-label="Example icon button with a home icon">
+                <mat-icon>home</mat-icon>
+            </button>
+        </a>
+        <button mat-icon-button class="example-icon" aria-label="Example icon-button with person icon">
+            <mat-icon>person</mat-icon>
+        </button>
+    </mat-toolbar>
+</p>
+<mat-drawer-container class="example-container">
+    <mat-drawer mode="side" [opened]="opened" mode="push"> <!-- 侧边内容 --><mat-list role="list">
+            <mat-list-item role="listitem">Liste des devoirs</mat-list-item>
+            <mat-list-item role="listitem">Ajout d'un devoir</mat-list-item>
+            <mat-list-item role="listitem">Modification d'un devoir</mat-list-item>
+            <mat-list-item role="listitem">Suppression d'un devoir</mat-list-item>
+            <mat-list-item role="listitem">Génération de données de test</mat-list-item>
+        </mat-list>
+    </mat-drawer>
+    <mat-drawer-content> <!-- 主要内容 -->
+        <router-outlet></router-outlet>
+    </mat-drawer-content>
+</mat-drawer-container>
