--- a/assignment-app/src/app/assignments/login-assignment/login-assignment.component.html
+++ b/assignment-app/src/app/assignments/login-assignment/login-assignment.component.html
@@ -20,6 +20,30 @@
   <button mat-raised-button color="primary" type="submit">Submit</button>
 </form>
 
+<table border="1">
+  <thead>
+    <tr>
+      <th>User1</th>
+      <th>User2</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>role : user </td>
+      <td>role : admin</td>
+    </tr>
+    <tr>
+      <td>nom : Peter</td>
+      <td>nom : Peter</td>
+    </tr>
+    <tr>
+      <td>password : 123456</td>
+      <td>password : 12345678</td>
+    </tr>
+  </tbody>
+</table>
+
+
 
         
 
