--- a/assignment-app/src/app/assignments/login-assignment/login-assignment.component.html
+++ b/assignment-app/src/app/assignments/login-assignment/login-assignment.component.html
@@ -19,7 +19,8 @@
   <br>
   <button mat-raised-button color="primary" type="submit">Submit</button>
 </form>
-
+<br>
+<button (click)="onLoginAdminDirectly()" mat-raised-button color="primary" type="submit">Admin一键登录</button>
 <table border="1">
   <thead>
     <tr>
